# sphinxcontrib-relativeinclude

./: .editorconfig  .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  publish-test.yml  publish.yml
docs/: conf.py  index.rst
src/sphinxcontrib/: relativeinclude.py
src/sphinxcontrib/relativeinclude/: __about__.py  relativeinclude.py
src/sphinxcontrib_relativeinclude/: __about__.py  __init__.py  relativeinclude.py
tests/: __init__.py  test_relativeinclude.py
