[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-relativeinclude"
description = "Implements a new reST include directive to translate relative paths."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Fynn Freyer", email = "fynn.freyer@googlemail.com" },
]
requires-python = ">=3.8"
dynamic = ["version"]

keywords = ["reST", "restructured text", "docutils", "sphinx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
]
dependencies = [
    "docutils",
]

[project.optional-dependencies]
dev = [
    "docutils-stubs",
]

[project.urls]
Documentation = "https://fynnfreyer.github.io/sphinxcontrib-relativeinclude"
Issues = "https://github.com/FynnFreyer/sphinxcontrib-relativeinclude/issues"
Source = "https://github.com/FynnFreyer/sphinxcontrib-relativeinclude"

[tool.hatch.version]
path = "src/sphinxcontrib_relativeinclude/__about__.py"

[tool.hatch.envs.default]
[tool.hatch.envs.default.scripts]
release = [
    # check for staged or unstaged changes (abort if any)
    "git diff --exit-code",
    "git diff --cached --exit-code",
    # if none, we bump version, and commit
    "hatch version {args:patch}",
    'git commit -am "build: bump version to $(hatch version) for release"',
    # now generate a tag, and push to origin
    "git tag $(hatch version)",
    "git push origin --tags",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
all = "pytest {args:tests}"
all-cov = "all --cov={args:src/sphinxcontrib_relativeinclude}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "all-cov",
    "cov-report",
]

[tool.hatch.envs.docs]
dependencies = [
    "myst-parser",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-svg2pdfconverter[CairoSVG]",
]
[tool.hatch.envs.docs.scripts]
build = [
    "- rm -r docs/_build/{args}",
    # in case of pdf we have to use the latex builder, otherwise we can proceed
    'if [ "{args}" = "pdf" ]; then sphinx-build -aE -b latex docs docs/_build/pdf; else sphinx-build -aE -b {args} docs docs/_build/{args}; fi',
    'if [ "{args}" = "pdf" ]; then make -C docs/_build/pdf; fi',
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/sphinxcontrib_relativeinclude tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["sphinxcontrib_relativeinclude"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["sphinxcontrib_relativeinclude", "tests"]
branch = true
parallel = true
omit = [
    "src/sphinxcontrib_relativeinclude/__about__.py",
]

[tool.coverage.paths]
sphinxcontrib_relativeinclude = ["src/sphinxcontrib_relativeinclude", "*/sphinxcontrib-relativeinclude/src/sphinxcontrib_relativeinclude"]
tests = ["tests", "*/sphinxcontrib-relativeinclude/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
